# Supermarket-POS

./: .gitignore  README.md  pyproject.toml
docs/: ITERATIONS.md  Supermarket_POS_UseCase_UML.docx
src/supermarket_pos/: main.py
src/supermarket_pos/domain/: cashier.py  register.py  store.py
src/supermarket_pos/domain/common/: money.py
src/supermarket_pos/domain/payment/: cash_payment.py  payment.py
src/supermarket_pos/domain/product/: exceptions.py  product_catalog.py  product_description.py
src/supermarket_pos/domain/sales/: sale.py  sales_line_item.py
tests/domain/: test_register.py
tests/domain/common/: test_money.py
tests/domain/payment/: test_cash_payment.py
tests/domain/sales/: test_sale.py
